fix text overflow in product selection page and add focus to add item tabs

--- a/public/less/components/product-selector.less
+++ b/public/less/components/product-selector.less
@@ -4,6 +4,12 @@
 
 .product-selector .btn {
   margin-top: 1em;
+
+  a {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 }
 
 .product__tout {
